--- a/CS/DashboardXpoExample/App.config
+++ b/CS/DashboardXpoExample/App.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <connectionStrings>
-        <add name="northwind" connectionString="XpoProvider=MSAccess;Provider=Microsoft.Jet.OLEDB.4.0;Mode=Share Deny None;data source=nwind.mdb;user id=;password=;" />
+        <add name="northwind" connectionString="XpoProvider=SQLite;data source=nwind.sqlite" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
