--- a/VB/DashboardXpoExample/DashboardXpoExample.vbproj
+++ b/VB/DashboardXpoExample/DashboardXpoExample.vbproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -6,7 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{EFE95F9B-5B2E-4851-B047-469F792E73B5}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <AssemblyName>DashboardXpoExample</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -16,6 +17,8 @@
     <OptionCompare>Binary</OptionCompare>
     <OptionStrict>Off</OptionStrict>
     <OptionInfer>On</OptionInfer>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -37,43 +40,47 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DevExpress.Charts.v19.2.Core" />
-    <Reference Include="DevExpress.Dashboard.v19.2.Core" />
-    <Reference Include="DevExpress.Dashboard.v19.2.Win" />
-    <Reference Include="DevExpress.Data.v19.2" />
-    <Reference Include="DevExpress.DataAccess.v19.2" />
-    <Reference Include="DevExpress.DataAccess.v19.2.UI" />
-    <Reference Include="DevExpress.Map.v19.2.Core" />
-    <Reference Include="DevExpress.Office.v19.2.Core" />
-    <Reference Include="DevExpress.PivotGrid.v19.2.Core" />
-    <Reference Include="DevExpress.Printing.v19.2.Core" />
-    <Reference Include="DevExpress.RichEdit.v19.2.Core" />
-    <Reference Include="DevExpress.Sparkline.v19.2.Core" />
-    <Reference Include="DevExpress.TreeMap.v19.2.Core" />
-    <Reference Include="DevExpress.Utils.v19.2" />
-    <Reference Include="DevExpress.Utils.v19.2.UI" />
-    <Reference Include="DevExpress.Xpo.v19.2" />
-    <Reference Include="DevExpress.XtraBars.v19.2" />
-    <Reference Include="DevExpress.XtraCharts.v19.2" />
-    <Reference Include="DevExpress.XtraCharts.v19.2.UI" />
-    <Reference Include="DevExpress.XtraCharts.v19.2.Wizard" />
-    <Reference Include="DevExpress.XtraEditors.v19.2" />
-    <Reference Include="DevExpress.XtraGauges.v19.2.Core" />
-    <Reference Include="DevExpress.XtraGauges.v19.2.Presets" />
-    <Reference Include="DevExpress.XtraGauges.v19.2.Win" />
-    <Reference Include="DevExpress.XtraGrid.v19.2" />
-    <Reference Include="DevExpress.XtraLayout.v19.2" />
-    <Reference Include="DevExpress.XtraMap.v19.2" />
-    <Reference Include="DevExpress.XtraPivotGrid.v19.2" />
-    <Reference Include="DevExpress.XtraPrinting.v19.2" />
-    <Reference Include="DevExpress.CodeParser.v19.2" />
-    <Reference Include="DevExpress.XtraReports.v19.2" />
-    <Reference Include="DevExpress.XtraRichEdit.v19.2" />
-    <Reference Include="DevExpress.XtraTreeList.v19.2" />
-    <Reference Include="DevExpress.XtraTreeMap.v19.2" />
+    <Reference Include="DevExpress.Charts.v20.1.Core" />
+    <Reference Include="DevExpress.Dashboard.v20.1.Core" />
+    <Reference Include="DevExpress.Dashboard.v20.1.Win" />
+    <Reference Include="DevExpress.Data.v20.1" />
+    <Reference Include="DevExpress.DataAccess.v20.1" />
+    <Reference Include="DevExpress.DataAccess.v20.1.UI" />
+    <Reference Include="DevExpress.Map.v20.1.Core" />
+    <Reference Include="DevExpress.Office.v20.1.Core" />
+    <Reference Include="DevExpress.PivotGrid.v20.1.Core" />
+    <Reference Include="DevExpress.Printing.v20.1.Core" />
+    <Reference Include="DevExpress.RichEdit.v20.1.Core" />
+    <Reference Include="DevExpress.Sparkline.v20.1.Core" />
+    <Reference Include="DevExpress.TreeMap.v20.1.Core" />
+    <Reference Include="DevExpress.Data.Desktop.v20.1" />
+    <Reference Include="DevExpress.Utils.v20.1" />
+    <Reference Include="DevExpress.Utils.v20.1.UI" />
+    <Reference Include="DevExpress.Xpo.v20.1" />
+    <Reference Include="DevExpress.XtraBars.v20.1" />
+    <Reference Include="DevExpress.XtraCharts.v20.1" />
+    <Reference Include="DevExpress.XtraCharts.v20.1.UI" />
+    <Reference Include="DevExpress.XtraCharts.v20.1.Wizard" />
+    <Reference Include="DevExpress.XtraEditors.v20.1" />
+    <Reference Include="DevExpress.XtraGauges.v20.1.Core" />
+    <Reference Include="DevExpress.XtraGauges.v20.1.Presets" />
+    <Reference Include="DevExpress.XtraGauges.v20.1.Win" />
+    <Reference Include="DevExpress.XtraGrid.v20.1" />
+    <Reference Include="DevExpress.XtraLayout.v20.1" />
+    <Reference Include="DevExpress.XtraMap.v20.1" />
+    <Reference Include="DevExpress.XtraPivotGrid.v20.1" />
+    <Reference Include="DevExpress.XtraPrinting.v20.1" />
+    <Reference Include="DevExpress.CodeParser.v20.1" />
+    <Reference Include="DevExpress.XtraReports.v20.1" />
+    <Reference Include="DevExpress.XtraRichEdit.v20.1" />
+    <Reference Include="DevExpress.XtraTreeList.v20.1" />
+    <Reference Include="DevExpress.XtraTreeMap.v20.1" />
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.SQLite, Version=1.0.112.1, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Data.SQLite.Core.1.0.112.2\lib\net40\System.Data.SQLite.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -123,6 +130,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="nwind.sqlite">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="ORMDataModel1.xpo" />
     <None Include="ORMDataModel1.xpo.diagram">
       <DependentUpon>ORMDataModel1.xpo</DependentUpon>
@@ -136,14 +146,17 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Content Include="nwind.mdb">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
+  <Import Project="..\packages\System.Data.SQLite.Core.1.0.112.2\build\net40\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.112.2\build\net40\System.Data.SQLite.Core.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\System.Data.SQLite.Core.1.0.112.2\build\net40\System.Data.SQLite.Core.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\System.Data.SQLite.Core.1.0.112.2\build\net40\System.Data.SQLite.Core.targets'))" />
+  </Target>
 </Project>
